fix: make items in toolbars and navigation use the align-items: flex-start strategy and tooltips in the same containers relate to the items (#1984)

--- a/scss/_viewer.scss
+++ b/scss/_viewer.scss
@@ -17,6 +17,14 @@
   margin-top: .5rem;
 }
 
+.o-navigation button {
+  position: relative;
+}
+
+.o-maptools button {
+  position: relative;
+}
+
 .o-footer {
   background-color: $black;
   background-color: rgba(0, 0, 0, 0.8);
